MYPLAN-2665 added color style to buttons for days of the week. MYPLAN-2587 fixed truncation of course title

--- a/myplan-web/src/main/webapp/themes/ksap/stylesheets/schedule/reserved.less
+++ b/myplan-web/src/main/webapp/themes/ksap/stylesheets/schedule/reserved.less
@@ -43,3 +43,8 @@
 .scheduleReserved__slider {
 
 }
+
+.toggleButton .ui-state-active {
+    background-color: #39f;
+    color: #fff;
+}
